working on #28: fixes an issue on mac os where no scrollbars beeing shown and a mousewheel action is translated in a zoom command

--- a/src/index.css
+++ b/src/index.css
@@ -50,3 +50,34 @@ a:hover {
 }
 
 /* .Select-menu { max-height: 350px;} */
+
+/* fixes an issue on mac os where no scrollbars beeing shown and a mousewheel action is translated in a zoom command */
+/* Just a test to make sure that we have the right element*/
+/*
+.dropdown-menu {
+    background-color: #f00;   
+}
+*/
+
+.dropdown-menu::-webkit-scrollbar {
+    -webkit-appearance: none;
+}
+
+.dropdown-menu::-webkit-scrollbar:vertical {
+    width: 11px;
+}
+
+.dropdown-menu::-webkit-scrollbar:horizontal {
+    height: 11px;
+}
+
+.dropdown-menu::-webkit-scrollbar-thumb {
+    border-radius: 8px;
+    border: 2px solid white; /* should match background, can't be transparent */
+    background-color: rgba(0, 0, 0, .5);
+}
+
+.dropdown-menu::-webkit-scrollbar-track { 
+    background-color: #fff; 
+    border-radius: 8px; 
+} 
